fix TestMaybeNullUnsafeAccess for jdk 8